src/cli/snapshots/roadster__cli__tests__parse_cli@list_routes.snap
---
source: src/cli/mod.rs
expression: roadster_cli
---
skip_validate_config = false
allow_dangerous = false

[command]
type = 'Roadster'

[command.command]
type = 'ListRoutes'
